# nornickel

./: .gitignore  Makefile  README.md  compose.yaml  qa-session-voice-2.txt  qa-session-voice.txt
.github/: dependabot.yml
agent-system/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
agent-system/app/: __init__.py
agent-system/app/api/: errors.py  main.py
agent-system/app/api/routes/: constraints.py  diagnose.py  embed.py  extract.py  narrate.py  novelty.py  retrieve.py  skeptic.py
agent-system/app/config/: settings.py
agent-system/app/infra/: artifacts.py  db.py  llm.py  paths.py
agent-system/app/pipeline/diagnose/: parser.py  service.py
agent-system/app/pipeline/extract/: documents.py  entities.py  mock.py  normalization.py  service.py  validation.py
agent-system/app/pipeline/narrate/: service.py
agent-system/app/pipeline/rag/: embeddings.py  novelty.py  retrieval.py
agent-system/app/pipeline/skeptic/: service.py
agent-system/app/schemas/: __init__.py  contracts.py  errors.py
agent-system/app/scripts/: __init__.py  extract_corpus.py  run_extract_fixture.py  smoke_extract_base.py
agent-system/resources/fixtures/: extract_response.json
agent-system/tests/: test_documents.py  test_extract_contracts.py  test_extract_corpus_merge.py  test_path_security.py  test_retrieval_contracts.py
backend/: Cargo.toml  README.md
docs/: ARCHITECTURE.md  PRESENTATION.md  extract_corpus.json  extract_corpus_metallurgy-v1.json  presentation.html
frontend/: .env.example  README.md  nginx.conf  package.json  (+1 more)
(+68 files in other folders)
