[project]
name = "nornikel-agent-system"
version = "0.1.0"
description = "Python agent sidecar for the Nornikel hypothesis factory."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "openai>=1.93",
  "openpyxl>=3.1",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "psycopg[binary]>=3.2",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.5",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
